--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   flutter:
     sdk: flutter
   audioplayers: ^0.20.1
+  intl: ^0.17.0
+  file_picker: ^4.1.6
 
 
 
@@ -41,6 +43,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+    
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -80,6 +83,9 @@ flutter:
     -  assets/images/gamelogo.png
     -  assets/images/gamelogo.png
     -  assets/music/videoplayback.mp3
+    -  assets/images/Akbar.jpeg
+    -  assets/images/Dheo.jpeg
+    -  assets/images/Veri.jpeg
 
 
 
